# graph-lite

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  T01-Simple.cpp  T02-Param.cpp  justfile
src/: CGraph-lite.h  element.h  graph_lite.hpp  node.h  param.h  param_manager.h  pipeline.h  pipeline_factory.h  schedule.h  status.h
